# laser_scan_classfication

./: .gitignore  CMakeLists.txt  center_logic.txt  main.cpp  readMe
dataset/: data.txt
dataset_0106/: README.md  data.txt
dataset_bak/: data.txt
dataset_new/dataset/: center.txt  data.txt
dataset_ranging_0106/: README.md  data.txt
include/: calculate.h  camera.h  classify.h  common.h  cross_center.h
src/: CMakeLists.txt  calculate.cpp  camera.cpp  classify.cpp  cross_center.cpp
